kubernetes/sealed-secrets-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sealed-secrets-controller
  namespace: kube-system
spec:
  ports:
  - port: 8080
  selector:
    name: sealed-secrets-controller
