kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
  - name: web-port
    port: 80
    targetPort: 3000
  selector:
    app: web
  type: ClusterIP
status:
  loadBalancer: {}
